Bug 1575419 - Don't allow triggering another main thread paint from within a main thread paint. r=mattwoodrow

This also moves the MaybeScheduleUnsuspendAsyncCATransactions() call to the end
of HandleMainThreadCATransaction() so that we can't get re-suspended from within
WillPaintWindow().

Differential Revision: https://phabricator.services.mozilla.com/D42763